# AMTL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  license.txt  readme.txt
.github/workflows/: cmake-clang.yml  cmake-gcc.yml  cmake-msvc-2019.yml  cmake-msvc-2022.yml  cmake-msvc.yml
src/: CMakeLists.txt  amt_cassert.h  amt_compat.h  amt_config.h  amt_map.h  amt_pod.h  amt_rawdatadebugchecker.h  amt_set.h  amt_string.h  amt_types.h  amt_vector.h  amt_wstring.h  amtinternal_hashmap.h  amtinternal_utils.h
test/: AMTTests.cpp  AMTTests_all_featues_off.cpp  AMTTests_all_features_ON.cpp  AMTTests_all_features_ON_PODTypesDifferentSize.cpp  AMTTests_all_features_off.cpp  AMTTests_core.cpp  AMTTests_only_main_feature_ON.cpp  AMTTests_only_overflow_check_on.cpp  CMakeLists.txt
